--- a/sass/slider.scss
+++ b/sass/slider.scss
@@ -15,23 +15,23 @@
   position: relative;
   order: 1;
 }
-.slider__input#red:checked ~ .slider__shoes--nike {
-  display: none;
+.slider__input#red:checked ~ .slider__shoes--abibas {
+  display: flex;
 }
-.slider__input#black:checked ~ .slider__shoes--abibas {
-  display: none;
+.slider__input#black:checked ~ .slider__shoes--nike {
+  display: flex;
 }
 
 .slider__input#green:checked ~ .slider__shoes--conv {
-  display: none;
+  display: flex;
 }
 
 .slider__input#blue:checked ~ .slider__shoes--uarm {
-  display: none;
+  display: flex;
 }
 
 .slider__shoes {
-  display: flex;
+  display: none;
   width: 100%;
   height: 250px;
   padding-left: 15px;
